hard-gists/2d6bbffce9dda5f3057b4879c3bd4422/run.log
=== Docker Run Log for 2d6bbffce9dda5f3057b4879c3bd4422 ===
Started at: Mi 29. Okt 13:26:16 CET 2025

[2025-10-29 13:26:16] START: Running container for 2d6bbffce9dda5f3057b4879c3bd4422
[2025-10-29 13:26:17] SUCCESS: Container 80d74f6e886e8e1cd50b8c3c269e535eeefdab4fc4a8cde54dcc9eaad51ffd21 started for 2d6bbffce9dda5f3057b4879c3bd4422
=== Container logs for 2d6bbffce9dda5f3057b4879c3bd4422 ===
  File "/snippet.py", line 37
    print "usage: greenscreen.py [-h,--help] [input_file]"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2d6bbffce9dda5f3057b4879c3bd4422 ===
[2025-10-29 13:26:19] INFO: Container 80d74f6e886e8e1cd50b8c3c269e535eeefdab4fc4a8cde54dcc9eaad51ffd21 has stopped
